buildscript {

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.5.RELEASE")
    }
}

apply plugin: "java"
apply plugin: "spring-boot"

jar {

    baseName = "serinus"
    version = "0.0.1"
}

repositories {
    mavenCentral()
}

sourceCompatibility = 1.7
targetCompatibility = 1.7

dependencies {

    compile("org.apache.commons:commons-lang3:3.4")
    compile("commons-httpclient:commons-httpclient:3.1")
    compile("org.hsqldb:hsqldb")
    compile("org.springframework.boot:spring-boot-starter")
    compile("org.springframework.boot:spring-boot-starter-data-jpa")
    compile("org.springframework.boot:spring-boot-starter-jetty")
    compile("org.springframework.boot:spring-boot-starter-web") {
        exclude module: "spring-boot-starter-tomcat"
    }
    compile("org.tuckey:urlrewritefilter:4.0.4")

    testCompile("junit:junit")
    testCompile("org.mockito:mockito-all:1.10.19")
}

tasks.withType(JavaCompile) {

    options.fork = true
    options.forkOptions.jvmArgs += ["-Xmx32m", "-XX:MaxPermSize=32m"]
    options.compilerArgs << "-Xlint:unchecked"
}

task wrapper(type: Wrapper) {
    gradleVersion = "2.3"
}